--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://nurserynest-backend.onrender.com
+VITE_API_BASE_URL='https://sproutix-backend.onrender.com'
 VITE_FIREBASE_API_KEY="AIzaSyCIpmqir1iWXIlfT5EazviBTOfPNKoeORU"
